<resources>
    <string name="app_name">Titans Calculator</string>

    <string name="clear">Clear</string>
    <string name="showResults_appBar">Saved Results</string>
    <string name="delete">Delete</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="divide">/</string>
    <string name="addition">+</string>
    <string name="minus">-</string>
    <string name="equals">=</string>
    <string name="multiply">*</string>

    <string name="saveResult">Save Result</string>
    <string name="showResult">Show Results</string>
</resources>
