 <?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.totha.mycalculator.MainActivity"
    android:orientation="vertical"
    android:backgroundTint="#444444"
    android:background="#444444">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="125"
        android:id="@+id/resultTextView"
        android:backgroundTint="@color/material_deep_teal_200"
        android:background="@color/dim_foreground_material_dark"
        android:textAlignment="viewEnd"
        android:textSize="@dimen/abc_action_bar_progress_bar_size" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/clear"
        android:layout_marginTop="25dp"
        android:textColor="#222222"
        android:textSize="30sp"
        android:backgroundTint="#FFCD00" />

    <GridLayout
        android:id="@+id/buttonGridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="4"
        android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/seven"
                android:id="@+id/seven"
                android:onClick="onClick"
                android:textColor="#222222"
                android:backgroundTint="#009AE6"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/eight"
                android:id="@+id/eight"
                android:onClick="onClick"
                android:textColor="#222222"
                android:backgroundTint="#009AE6"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/nine"
                android:id="@+id/nine"
                android:onClick="onClick"
                android:textColor="#222222"
                android:backgroundTint="#009AE6"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/divide"
                android:id="@+id/divide"
                android:onClick="onClick"
                android:textColor="#222222"
                android:backgroundTint="#FFCD00"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/four"
                android:id="@+id/four"
                android:onClick="onClick"
                android:textColor="#222222"
                android:backgroundTint="#009AE6"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/five"
                android:id="@+id/five"
                android:onClick="onClick"
                android:textColor="#222222"
                android:backgroundTint="#009AE6"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/six"
                android:id="@+id/six"
                android:onClick="onClick"
                android:textColor="#222222"
                android:backgroundTint="#009AE6"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/multiply"
                android:id="@+id/multiply"
                android:onClick="onClick"
                android:textColor="#222222"
                android:backgroundTint="#FFCD00"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/one"
                android:id="@+id/one"
                android:onClick="onClick"
                android:textColor="#222222"
                android:backgroundTint="#009AE6"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/two"
                android:id="@+id/two"
                android:onClick="onClick"
                android:textColor="#222222"
                android:backgroundTint="#009AE6"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/three"
                android:id="@+id/three"
                android:onClick="onClick"
                android:textColor="#222222"
                android:backgroundTint="#009AE6"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/minus"
                android:id="@+id/minus"
                android:onClick="onClick"
                android:textColor="#222222"
                android:backgroundTint="#FFCD00"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dot"
                android:id="@+id/dot"
                android:onClick="onClick"
                android:textColor="#222222"
                android:backgroundTint="#FFCD00"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/zero"
                android:id="@+id/zero"
                android:onClick="onClick"
                android:textColor="#222222"
                android:backgroundTint="#009AE6"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/equals"
                android:id="@+id/equals"
                android:onClick="onClick"
                android:textColor="#222222"
                android:backgroundTint="#FFCD00"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/addition"
                android:id="@+id/addition"
                android:onClick="onClick"
                android:textColor="#222222"
                android:backgroundTint="#FFCD00"/>
    </GridLayout>
</LinearLayout>
